# OmniJoy

./: README.md  Rev-0_to_Rev-1_Change-Log.txt
Firmware/: Arduino_Setup.txt  README.md  boards.txt  pins_arduino.h
Firmware/Testing_Firmware/: Testing_Firmware.ino
Firmware/Testing_Firmware_CPPM/: Testing_Firmware_CPPM.ino
Firmware/Testing_Firmware_CPPM/jm_CPPM/: jm_CPPM.cpp  jm_CPPM.h
Hardware/: README.md
Software/: OmniJoy_Driver.c  README.md  avrdude-omnijoy
Software/OmniJoy-Zowi/: OmniJoy-Zowi.pro  main.cpp  zowi_control.cpp  zowi_control.h  zowi_control.ui
Software/RGB666/: ER-TFT035-6(4-Wire-SPI)_TP_SD_DemoCode (2).rar
Software/RGB666/ER-TFT035-6(4-Wire-SPI)_TP_SD__DemoCode/: 9488TP.h  ER-TFT035-6-4SPI.uvopt  ER-TFT035-6-4SPI_uvopt.bak  TP.h  sd  sd.LST  sd.M51  sd.c  sd.hex  sd.plg  sd.uvopt
Software/RGB666/drawDirect/: spi_test  spi_test.c
Software/RGB666/fb_RGB666/: CMakeLists.txt  fb_RGB666_bcm2835.c  fb_RGB666_wiringPi.c
Software/batteryApplet/BatteryApplet/: BatteryApplet.pro  Makefile  batteryapplet.cpp  batteryapplet.h  batteryapplet.ui  main.cpp  moc_batteryapplet.cpp  ui_batteryapplet.h
Software/batteryLog/: batteryLog.c
